Changed background for section 1 and restyled flex

--- a/styles.css
+++ b/styles.css
@@ -10,3 +10,9 @@ body::before {
 .text-purple {
   color: #6c63ff !important;
 }
+.bg-purple {
+  background: #6c63ff !important;
+}
+.nav-link:hover {
+  color: #6c63ff !important;
+}
