Added button to updates section to show more/less

--- a/styles.css
+++ b/styles.css
@@ -134,3 +134,11 @@ hr {
 .bg-react {
   background: #61dafb;
 }
+
+.update{
+  transition: transform 100ms
+}
+.update:hover{
+  transform: scale(1.02)
+}
+
