--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,10 @@ hr {
   color: #3f3d56 !important;
   border: solid 2px #3f3d56 !important;
 }
+.hr-lightblue{
+  color: #4675cc;
+  border: solid 2px #4675cc;
+}
 .hr-dark{
   color: #39527f !important;
   border: solid 2px #39527f !important;
@@ -126,15 +130,38 @@ hr {
 }
 
 .update{
-  transition: transform 100ms
+  transition: transform 100ms;
+  position: relative;
+}
+.update::before{
+  content:'';
+  width: 6px;
+  position: absolute;
+  top: -12%;
+  bottom: -15%;
+  left: -5%;
+  border-radius: 5px;
+  background: #39527f;
+  pointer-events: none;
+}
+.update::after{
+  position: absolute;
+  content:'';
+  width: 5%;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  background: #1f2327;
+  border: solid 5px #4675cc;
+  top:40%;
+  left: -7%;
+  box-shadow: 3px 3px 3px #272424
+
 }
 
-.update:hover{
-  transform: scale(1.02)
-}
 .updateDate{
   position: relative;
 }
+
 .controlProjectCont{
   transform: rotate(3deg);
   top: -5%;
@@ -144,8 +171,14 @@ hr {
 .controlProjectCont > * {
   transform: rotate(-3deg)
 }
-.controlProjectCont > h1{
-  font-family: 'Oswald'
+.control-app-heading{
+  font-family: 'Oswald';
+  background-image: linear-gradient(170deg, #f2709c, #ff9472);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  text-shadow: 5px 3px #fff;
+  letter-spacing: 2px;
+
 }
 
 /*large screens*/
