--- a/styles.css
+++ b/styles.css
@@ -199,9 +199,75 @@ hr {
   left: -15%;
   overflow: hidden;
 }
-.controlProjectCont > * {
-  transform: rotate(-3deg);
+.project-container {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-areas:
+    "a a a a b"
+    "c c d d b"
+    "c c d d b";
+  gap: 1em;
 }
+.project-child {
+}
+.project-item-a {
+  grid-area: a;
+  pointer-events: none;
+}
+.project-item-a > h1 {
+  transform: translateY(0px) !important;
+}
+.project-item-b {
+  grid-area: b;
+}
+.project-item-c {
+  grid-area: c;
+}
+.project-item-d {
+  grid-area: d;
+}
+.project-item-e {
+  grid-area: e;
+}
+.project-content {
+  top: -100%;
+  width: 100%;
+  height: 100%;
+}
+.project-content > h1 {
+  transform: translateY(30px);
+  transition: all 200ms;
+}
+.project-content > p {
+  opacity: 0;
+  transition: all 200ms;
+}
+.project-content:hover {
+  transform: scale(1.01);
+}
+.project-content:hover > h1 {
+  transform: translateY(0);
+}
+.project-content:hover > p {
+  opacity: 1;
+  transform: translateY(-20px);
+}
+.project-child:hover > .project-overlay {
+  opacity: 1;
+}
+.project-overlay {
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgb(255, 0, 0);
+  opacity: 0.1;
+  width: 100%;
+  height: 100%;
+  transition: all 200ms;
+}
+
 .control-app-heading {
   font-family: "Oswald";
   background-image: linear-gradient(170deg, #f2709c, #ff9472);
